# learning-paths-tauri-react

./: .gitignore  README.md  flake.nix  package-lock.json  package.json  symlink_hooks.sh
.github/workflows/: build.yml
hooks/: pre-commit
rust-workspace/: Cargo.toml
rust-workspace/assignments-plugin/: Cargo.toml
rust-workspace/assignments-plugin/src/: lib.rs
rust-workspace/assignments_plugin/: Cargo.toml
rust-workspace/assignments_plugin/src/: lib.rs
rust-workspace/dummy-node-plugin/: Cargo.toml
rust-workspace/dummy-node-plugin/src/: lib.rs
rust-workspace/dummy_cluster_plugin/: Cargo.toml
rust-workspace/dummy_cluster_plugin/src/: lib.rs
rust-workspace/dummy_node_plugin/: Cargo.toml
rust-workspace/dummy_node_plugin/src/: lib.rs
rust-workspace/dummy_node_plugin_with_extension_field_1/: Cargo.toml
rust-workspace/dummy_node_plugin_with_extension_field_1/src/: lib.rs
rust-workspace/dummy_node_plugin_with_extension_field_2/: Cargo.toml
rust-workspace/dummy_node_plugin_with_extension_field_2/src/: lib.rs
rust-workspace/dummy_zip_plugin/: Cargo.toml
rust-workspace/dummy_zip_plugin/src/: lib.rs
rust-workspace/learning-paths-tauri-react/: Cargo.toml  tauri.conf.json
rust-workspace/learning-paths-tauri-react/src/: deserialization.rs  domain.rs  lib.rs  main.rs
rust-workspace/learning-paths-tauri-react/tests/simpleproject/: cluster_schema.json  pre-contents.lc.yaml
rust-workspace/learning-paths-tauri-react/tests/technicalinfo/: pre-contents.lc.yaml
rust-workspace/logic_based_learning_paths/: Cargo.toml
rust-workspace/logic_based_learning_paths/src/: deserialization.rs  domain.rs  lib.rs  main.rs  rendering.rs
rust-workspace/logic_based_learning_paths/tests/simpleproject/: .gitignore  pre-contents.lc.yaml
rust-workspace/logic_based_learning_paths/tests/technicalinfo/: cluster_schema.json  pre-contents.lc.yaml
rust-workspace/logic_based_learning_paths_bin/: Cargo.toml  tauri.conf.json
rust-workspace/logic_based_learning_paths_bin/src/: main.rs
rust-workspace/logic_based_learning_paths_bin/tests/clusterwithredundantsoftdependency/: contents.lc.yaml
rust-workspace/logic_based_learning_paths_bin/tests/simpleproject/: pre-contents.lc.yaml
rust-workspace/logic_based_learning_paths_bin/tests/technical_info_cycle/: contents.lc.yaml
rust-workspace/markdown-rendering-plugin/: Cargo.toml
rust-workspace/markdown-rendering-plugin/src/: lib.rs
rust-workspace/markdown_rendering_plugin/: Cargo.toml
rust-workspace/markdown_rendering_plugin/src/: lib.rs
rust-workspace/markdown_rendering_plugin/tests/flat-dir/: file1.txt
rust-workspace/markdown_rendering_plugin/tests/page-with-gifs/: index.md
rust-workspace/markdown_rendering_plugin/tests/page-with-jpgs/: index.md
rust-workspace/markdown_rendering_plugin/tests/page-with-pngs/: index.html  index.md
rust-workspace/markdown_rendering_plugin/tests/page-with-svgs/: index.md
rust-workspace/markdown_rendering_plugin/tests/page-with-webps/: index.md
rust-workspace/moodle-format-plugin/: Cargo.toml
rust-workspace/moodle-format-plugin/src/: lib.rs
rust-workspace/moodle_format_plugin/: Cargo.toml
rust-workspace/moodle_format_plugin/src/: lib.rs
rust-workspace/src/: main.rs
rust-workspace/workspace/learning-paths-tauri-react/: tauri.conf.json
rust-workspace/workspace/learning-paths-tauri-react/tests/technicalinfo/concept_Q/my_first_assignment/: contents.md
rust-workspace/yaml-schema-generation-plugin/: Cargo.toml
rust-workspace/yaml-schema-generation-plugin/src/: lib.rs
rust-workspace/yaml-schema-generation-plugin/tests/dummycluster_with_parameterized_node_plugin/: pre-contents.lc.yaml
rust-workspace/yaml_schema_generation_plugin/: Cargo.toml
rust-workspace/yaml_schema_generation_plugin/src/: lib.rs
rust-workspace/yaml_schema_generation_plugin/tests/dummycluster_with_each_type_of_plugin/: pre-contents.lc.yaml
rust-workspace/yaml_schema_generation_plugin/tests/dummycluster_with_extension_fields_from_multiple_plugins/: pre-contents.lc.yaml
rust-workspace/yaml_schema_generation_plugin/tests/dummycluster_with_parameterized_node_plugin/: pre-contents.lc.yaml
rust-workspace/yaml_schema_generation_plugin/tests/dummycluster_with_parameterized_pre_cluster_plugin/: pre-contents.lc.yaml
rust-workspace/yaml_schema_generation_plugin/tests/dummycluster_with_parameterized_pre_zip_plugin/: pre-contents.lc.yaml
rust-workspace/yaml_schema_generation_plugin/tests/dummycluster_without_plugins/: contents.lc.yaml
src/: App.tsx  ReadResult.tsx  iointerfaces.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: deserialization.rs  domain.rs  lib.rs  main.rs
src-tauri/tests/: git.yaml  simpleproject.yaml  technical_info_cycle.yaml  technicalinfo.yaml
src-tauri/tests/clusterwithredundantharddependency/: contents.lc.yaml
src-tauri/tests/clusterwithredundantsoftdependency/: contents.lc.yaml
src-tauri/tests/simpleproject/: contents.lc.yaml
src-tauri/tests/technicalinfo/: contents.lc.yaml
src-tauri/tests/technicalinfo/concept_Q/: contents.md
src-tauri/tests/technicalinfo/concept_Q/my_first_assignment/: attachment2.csv
webdriver/selenium/: package-lock.json
webdriver/selenium/test/: test.js
webdriver/webdriverio/: package-lock.json  wdio.conf.js
webdriver/webdriverio/test/specs/: example.e2e.js
