[workspace]
members = [
    "learning-paths-tauri-react",
    "assignments-plugin",
    "markdown-rendering-plugin"
, "moodle-format-plugin", "yaml-schema-generation-plugin"]
[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
