[package]
name = "dummy_node_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
logic_based_learning_paths = { path = "../logic_based_learning_paths/" }
schemars = "0.8.21"
serde_json = "1.0.120"
serde_yaml = "0.9.34"
