[package]
name = "lblp_dummy_node_plugin_with_extension_field_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
logic_based_learning_paths = { path = "../logic_based_learning_paths/", version = "0.0.1" }
