[package]
name = "logic_based_learning_paths"
version = "0.0.0"
description = "A system for organizing project-based learning paths"
authors = ["Vincent Nys"]
license = "MIT"
repository = "https://github.com/v-nys/learning-paths-tauri-react"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.20"
petgraph = { version = "0.6", features = [ "serde-1" ] }
serde_yaml = "0.9"
anyhow = "1.0.86"
schemars = "0.8.16"
lazy-regex = "3.1.0"
libloading = "0.8.3"
paste = "1.0.15"
