[package]
name = "logic_based_learning_paths"
version = "0.0.1"
description = "A system for organizing project-based learning paths"
authors = ["Vincent Nys"]
license = "MIT"
repository = "https://github.com/v-nys/learning-paths-tauri-react"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# these versions should be matched by dependencies
# or at least some...
schemars = "0.8.21"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
anyhow = "1.0.86"
# these are not related to those in plugins
petgraph = { version = "0.6", features = [ "serde-1" ] }
lazy-regex = "3.1.0"
libloading = "0.8.3"
paste = "1.0.15"
