[package]
name = "lblp_markdown_rendering_plugin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A markdown rendering plugin for Logic Based Learning Paths"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
comrak = { version = "0.24.1", features = [ "syntect", "emojis" ] }
logic_based_learning_paths = { version = "0.0.1", path = "../logic_based_learning_paths/" }
pretty_assertions = "1.4.0"
regex = "1.10.5"
walkdir = "2.5.0"
