[package]
name = "moodle_format_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
serde = "1.0.204"
serde_yaml = "0.9.34"
logic_based_learning_paths = "0.0.0"
yaml2json-rs = "0.4.0"
schemars = "0.8.21"
serde_json = "1.0.120"
