[package]
name = "lblp_moodle_format_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
logic_based_learning_paths = { version = "0.0.1", path = "../logic_based_learning_paths/" }
yaml2json-rs = "0.4.0"
