[package]
name = "yaml-schema-generation-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
learning-paths-tauri-react = { path = "../learning-paths-tauri-react/" }
regex = "1.10.5"
schemars = "0.8.21"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
