[package]
name = "lblp_yaml_schema_generation_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
# anyhow = "1.0.86"
logic_based_learning_paths = { path = "../logic_based_learning_paths/", version = "0.0.1" }
regex = "1.10.5"

[dev-dependencies]
pretty_assertions = "1.4.0"
